# Comportamiento-Memoria-Cache

./: CMakeLists.txt  README.md  block  block.cpp  cachegrind.out.40250  cachegrind.out.67911  cachegrind.out.68441  classic  classic.cpp  firts  firts_loop.cpp  loops  lops.cpp  run.sh  second  second_loop.cpp
results/cache/: block_cache_100.out  block_cache_1000.out  block_cache_1500.out  block_cache_2000.out  block_cache_300.out  block_cache_400.out  block_cache_700.out  classic_cache_100.out  classic_cache_1000.out  classic_cache_1500.out  classic_cache_2000.out  classic_cache_300.out  classic_cache_400.out  classic_cache_700.out  first_loop_cache_100.out  first_loop_cache_1000.out  first_loop_cache_10000.out  first_loop_cache_20000.out  first_loop_cache_500.out  first_loop_cache_5000.out  second_loop_cache_100.out  second_loop_cache_1000.out  second_loop_cache_10000.out  second_loop_cache_20000.out  second_loop_cache_500.out  second_loop_cache_5000.out
results/tiempos/: block_time_100.txt  block_time_1000.txt  block_time_1500.txt  block_time_2000.txt  block_time_300.txt  block_time_400.txt  block_time_700.txt  classic_time_100.txt  classic_time_1000.txt  classic_time_1500.txt  classic_time_2000.txt  classic_time_300.txt  classic_time_400.txt  classic_time_700.txt  first_loop_time_100.txt  first_loop_time_1000.txt  first_loop_time_10000.txt  first_loop_time_20000.txt  first_loop_time_500.txt  first_loop_time_5000.txt  second_loop_time_100.txt  second_loop_time_1000.txt  second_loop_time_10000.txt  (+3 more)
src/: block.cpp  classic.cpp  first_loop.cpp  second_loop.cpp
